--- a/src/styles/animations.module.scss
+++ b/src/styles/animations.module.scss
@@ -11,6 +11,7 @@
   }
 }
 
+// Used to fade in the h1 title
 @keyframes fadeInFromTop {
   0% {
     opacity: 0;
@@ -18,28 +19,6 @@
   }
   100% {
     opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@keyframes fadeInFromBottom {
-  from {
-    opacity: 0;
-    transform: translateY(0);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(-20px);
-  }
-}
-
-@keyframes fadeOutToBottom {
-  from {
-    opacity: 1;
-    transform: translateY(-20px);
-  }
-  to {
-    opacity: 0;
     transform: translateY(0);
   }
 }
